--- a/package.json
+++ b/package.json
@@ -9,20 +9,27 @@
     "url": "https://github.com/dk1a/solecslib.git"
   },
   "scripts": {
-    "test": "forge test",
+    "test": "forge test && hardhat test",
     "build": "forge build"
   },
   "files": [
     "/contracts/**/*.sol"
   ],
-  "devDependencies": {
-    "@latticexyz/solecs": "^1.25.1",
-    "@latticexyz/std-contracts": "^1.25.1",
-    "@openzeppelin/contracts": "^4.7.3",
-    "@prb/test": "^0.1.3",
+  "dependencies": {
+    "@latticexyz/solecs": "^1.26.0",
+    "@latticexyz/std-contracts": "^1.26.0",
+    "@openzeppelin/contracts": "^4.8.0",
     "@solidstate/contracts": "^0.0.48",
-    "ds-test": "github:dapphub/ds-test",
+    "memmove": "github:dk1a/memmove"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "@prb/test": "^0.1.3",
+    "@solidstate/spec": "^0.0.48",
+    "chai": "^4.3.7",
     "forge-std": "github:foundry-rs/forge-std",
-    "memmove": "github:brockelmore/memmove"
+    "hardhat": "^2.12.2",
+    "hardhat-preprocessor": "^0.1.5"
   }
 }
