--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "type": "git",
     "url": "https://github.com/dk1a/solecslib.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
+    "prepare": "husky install",
     "test": "forge test && hardhat test",
-    "build": "forge build"
+    "build": "forge build",
+    "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "files": [
     "/contracts/**/*.sol"
@@ -20,16 +25,20 @@
     "@latticexyz/std-contracts": "^1.27.1",
     "@openzeppelin/contracts": "^4.8.0",
     "@solidstate/contracts": "^0.0.48",
-    "memmove": "github:dk1a/memmove"
+    "memmove": "github:dk1a/memmove#ffd71cd77b1708574ef46a667b23ca3a5cc9fa27"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.2.0",
+    "@commitlint/config-conventional": "^17.2.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@prb/test": "^0.1.3",
     "@solidstate/spec": "^0.0.48",
     "chai": "^4.3.7",
-    "forge-std": "github:foundry-rs/forge-std",
+    "cz-conventional-changelog": "3.3.0",
+    "forge-std": "github:foundry-rs/forge-std#75129776235fe6ebf075b0c8d0fe412092a1ac96",
     "hardhat": "^2.12.2",
-    "hardhat-preprocessor": "^0.1.5"
+    "hardhat-preprocessor": "^0.1.5",
+    "husky": "^8.0.2"
   }
 }
