--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "/contracts/**/*.sol"
   ],
   "dependencies": {
-    "@latticexyz/solecs": "https://gitpkg.now.sh/dk1a/mud/packages/solecs?982747e9d05ebaa05a084d4c2aacfd53aa7b4397",
-    "@latticexyz/std-contracts": "https://gitpkg.now.sh/dk1a/mud/packages/std-contracts?982747e9d05ebaa05a084d4c2aacfd53aa7b4397",
-    "@openzeppelin/contracts": "^4.8.0",
-    "@solidstate/contracts": "^0.0.48",
+    "@latticexyz/solecs": "^1.34.0",
+    "@latticexyz/std-contracts": "^1.34.0",
+    "@openzeppelin/contracts": "^4.8.1",
+    "@solidstate/contracts": "^0.0.52",
     "memmove": "github:dk1a/memmove#ffd71cd77b1708574ef46a667b23ca3a5cc9fa27"
   },
   "devDependencies": {
