--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@prb/test": "^0.1.3",
     "@solidstate/spec": "^0.0.48",
     "chai": "^4.3.7",
+    "conventional-changelog-cli": "^2.2.2",
     "cz-conventional-changelog": "3.3.0",
     "forge-std": "github:foundry-rs/forge-std#75129776235fe6ebf075b0c8d0fe412092a1ac96",
     "hardhat": "^2.12.2",
