--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,7 @@
 [profile.default]
 src = 'contracts'
 out = 'artifacts'
-libs = ['node_modules']
+libs = ['node_modules', '../mud']
 include_paths = ['node_modules']
 optimizer = true
 optimizer_runs = 1000000
